--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">FlutuAnt</string>
+    <string name="enter_real_number">Digite um número real</string>
+    <string name="convert_button">Converter</string>
+    <string name="ieee_754_hex">IEEE-754 (Hexadecimal):</string>
+    <string name="mantissa_binary">Mantissa (Binário):</string>
+    <string name="exponent_decimal">Expoente (Decimal):</string>
+    <string name="exponent_binary_bias">Expoente (Binário com BIAS):</string>
+    <string name="std_float">Valor Float:</string>
+    <string name="nan_warning">O valor é inválido!</string>
+    <string name="decimal_separator_info">Separador decimal:</string>
 </resources>
